<resources>
    <string name="app_name">POSTALLY LITE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sales">Sale</string>
    <string name="customer_name">Customer Name</string>
    <string name="bill_no">Bill No</string>
    <string name="quantity">Quantity</string>
    <string name="receipt_status">Receipt Status</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="partial_paid_amount">Partial Paid Amount</string>
    <string name="due_amount">Due Amount</string>
    <string name="date">Date</string>
    <string name="invoice_id">Invoice Id</string>
    <string name="customer">Customer</string>
    <string name="search">search</string>
    <string name="invoice">Invoice</string>
    <string name="due">Due</string>
    <string name="total">Total</string>
    <string name="select_product">Select Product</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="payment">Payment</string>
    <string name="discount">Discount</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="product_empty">Product Not Found</string>
    <string name="balance">Balance</string>
    <string name="select_customer">select customer</string>
    <string name="old_due">Old Due</string>
    <string name="customer_valid">Enter Customer From Suggestion</string>
    <string name="product_empty_message">Select a Product</string>
    <string name="action">Action</string>
    <string name="warning_delete">Do You Want To Delete Invoice?</string>
    <string name="purchase_list">Purchase List</string>
    <string name="total_sale">Total Sale</string>
    <string name="d">D</string>
    <string name="m">M</string>
    <string name="y">Y</string>
    <string name="total_received">Total Receipt</string>
    <string name="total_payment">Total Payment</string>
    <string name="p">P</string>
    <string name="c">C</string>
    <string name="due_sale">Due Sale</string>
    <string name="due_purchase">Due Purchase</string>
    <string name="supplier">Supplier</string>
    <string name="purchase">Purchase</string>
    <string name="receipt">Receipt</string>
    <string name="product">Product</string>
    <string name="image_view">Image View</string>
    <string name="amount">Amount</string>
    <string name="email">Email</string>
    <string name="email_helper_text">Enter Your Email Address</string>
    <string name="username">Name</string>
    <string name="username_helper_text">Enter Your Name</string>
    <string name="mobile_number">Phone Number</string>
    <string name="mobile_helper_text">Enter Phone Number EX- 01 </string>
    <string name="authentication_code">Authentication Code</string>
    <string name="opt_helper_text">Enter Your OTP Here</string>
    <string name="postally">POSTALLY LITE</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="owner_name">Owner Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_person_phone">Contact Person No.</string>
    <string name="total_after_discount">Total After Discount</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="payment_form">Payment Form</string>
    <string name="contact_variable_required">Contact Variable <font color='#FF0000'>*</font></string>
    <string name="customer_name_hint">Customer Name<font color='#FF0000'>*</font></string>
    <string name="customer_address_hint">Customer Address<font color='#FF0000'>*</font></string>
    <string name="customer_mobile_hint">Customer Mobile<font color='#FF0000'>*</font></string>
    <string name="customer_nid_hint">Customer NID</string>
    <string name="customer_vat_hint">Customer Vat</string>
    <string name="customer_email_hint">Customer Email</string>
    <string name="customer_opening_balance_hint">Customer Opening Balance</string>
    <string name="company_name_hint">Company Name<font color='#FF0000'>*</font></string>
    <string name="owner_name_hint">Owner Name</string>
    <string name="contact_person_name_hint">Contact Person Name<font color='#FF0000'>*</font></string>
    <string name="supplier_address_hint">Supplier Address<font color='#FF0000'>*</font></string>
    <string name="supplier_email_hint">Email<font color='#FF0000'>*</font></string>
    <string name="supplier_mobile_hint">Mobile<font color='#FF0000'>*</font></string>
    <string name="tin_no">TIN No</string>
    <string name="tax_no">TAX No</string>
    <string name="vat_no">VAT No</string>
    <string name="bsti_no">BSTI No</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="create_supplier">Create Supplier</string>
    <string name="browse">Browse</string>
    <string name="product_name_hint">Name<font color='#FF0000'>*</font></string>
    <string name="product_selling_price_hint">Selling Price<font color='#FF0000'>*</font></string>
    <string name="info">Info</string>
    <string name="receipt_details">Receipt Details</string>
    <string name="receipt_id">Receipt ID</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="check_information">Check Information</string>
    <string name="cheque_date">Cheque Date</string>
    <string name="cheque_no">Cheque No</string>
    <string name="clearance_date">Clear Date</string>
    <string name="cancel">cancel</string>
    <string name="edit">edit</string>
    <string name="payment_id">Payment Id</string>
    <string name="customer_details">Customer Details</string>
    <string name="company_name">Shop Name</string>
    <string name="company_name_helper_text">Enter Shop Name</string>
    <string name="enter_payment_description">Enter Payment Description</string>
    <string name="enter_receipt_description">Enter Receipt Description</string>
    <string name="total_invoice">Total Invoice</string>
    <string name="total_discount">Total Discount</string>
    <string name="sub_total">Sub Total</string>
    <string name="details">Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="company">Company</string>
    <string name="product_quanty">Product/ Quantity</string>
    <string name="status">Status</string>
    <string name="contact_person_name">Contact Person</string>
    <string name="last_year_purchase_return_total">Last Year Purchase Return Total</string>
    <string name="last_year_credit">Last Year Credit</string>
    <string name="last_year_discount">Last Year Discount</string>
    <string name="last_year_total_invoice">Last Year Total Invoice</string>
    <string name="last_year_return">Last Year Return</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="last_years_total_quantity">Last Years Total Quantity</string>
    <string name="last_years_total_sale_quantity">Last Years Total Sale Quantity</string>
    <string name="last_years_sale_total">Last Years Sale Total</string>
    <string name="alert_quantity">Alert Quantity</string>
    <string name="sale_quantity">Sale Quantity</string>
    <string name="select_category">Select Category</string>
    <string name="expired">Your License period is expired!! Please Contact with Bitspeck</string>
    <string name="expired_title">Expired</string>
    <string name="receipt_inset_title">Receipt Insert</string>
    <string name="receipt_insert_error">Receipt Insertion Failed</string>
    <string name="customer_delete_title">Delete Customer</string>
    <string name="customer_delete_message">Do you want to delete this Customer</string>
    <string name="supplier_delete_title">Delete Supplier</string>
    <string name="supplier_delete_message">Do you want to delete this supplier?</string>
    <string name="purchase_delete_title">Delete Purchase</string>
    <string name="purchase_delete_message">Do you want to delete this invoice?</string>
    <string name="invoice_delete_title">Delete Invoice</string>
    <string name="invoice_delete_message">Do you want to delete this invoice?</string>
    <string name="payment_delete_title">Delete Payment</string>
    <string name="payment_delete_message">Do you want to delete this payment?</string>
    <string name="receipt_delete_title">Delete Receipt</string>
    <string name="receipt_delete_message">Do you want to delete this receipt?</string>
    <string name="postally_lite">POSTALLY LITE</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="sale_rtv">Sale Rtv</string>
    <string name="purchase_rtv">Purchase Rtv</string>
    <string name="rtv">Rtv</string>
    <string name="purchase_amount">Purchase Amount</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_details">Payment Details</string>
    <string name="enter_receipt_customer_id">Enter Receipt Customer Id</string>
    <string name="enter_supplier_id">Enter Supplier Id</string>
    <string name="purchase_invoice_no">Purchase Invoice No</string>
    <string name="register_for_30_days">Register For 30 Days</string>
    <string name="_1_kg">1 kg</string>
    <string name="_50_gm">50 gm</string>
    <string name="_100_gm">100 gm</string>
    <string name="_200_kg">200 kg</string>
    <string name="_2_kg">2 kg</string>
    <string name="_3_kg">3 kg</string>
    <string name="_5_kg">5 Kg</string>
    <string name="weight">Weight</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_150_gm">150 gm</string>
    <string name="_200_gm">200 gm</string>
    <string name="_300_gm">300 gm</string>
    <string name="_450_gm">450 gm</string>
    <string name="_500_gm">500 gm</string>
    <string name="_750_gm">750 gm</string>
    <string name="_10">10</string>
    <string name="_20_kg">20 kg</string>
    <string name="_10_kg">10 kg</string>
    <string name="_30_kg">30 kg</string>
    <string name="_20">20</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_50_kg">50 kg</string>
    <string name="_100_kg">100 kg</string>
    <string name="kilogram">Kilogram/kg</string>
    <string name="gram">Gram/gm</string>
    <string name="_30">30</string>
    <string name="select_quantity">SELECT QUANTITY</string>
    <string name="_250_gm">250 gm</string>
    <string name="_800_gm">800 gm</string>
    <string name="pieces">Piece</string>
    <!--    test add code-->
    <!--    <string name="admob_app_id">ca-app-pub-5634662458288793~4299401498</string>-->
    <!--    <string name="BANNER_AD_UNIT_ID">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="INTERSTITIAL_AD_ID">ca-app-pub-3940256099942544/2271988047</string>-->

    <!--    live ads code-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="BANNER_AD_UNIT_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="INTERSTITIAL_AD_ID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="otp">OTP</string>
    <string name="otp_helper_text">Please check your mobile or email and Enter Your OTP</string>
    <string name="create_customer">Create Customer</string>
    <string name="search_product">Search Product</string>
    <string name="create_product">Create Product</string>
    <string name="product_deleted">Product Deleted</string>
</resources>