<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.shopmanagement.ui.authentication.LicenseViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.LicenseFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/registraionLogo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:src="@drawable/postally"
                android:text="Postally"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/postally"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registraionLogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/clientMobileNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/mobile_number"
                android:textColorHint="@color/purple_500"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/purple_500"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="@string/mobile_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:inputType="number"
                    android:text="@={viewModel.mobileNumber}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/clientEmailNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/purple_500"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/purple_500"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="@string/email_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clientMobileNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewModel.emailNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/register_for_30_days"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>